--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Set up JDK 18
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '18'
         
       - name: Grant execute permission for gradlew
