--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,3 +49,6 @@ jobs:
           
       - name: Upload to S3
         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://schema-cd/$GITHUB_SHA.zip
+
+      - name: Code Deploy
+        run: aws deploy create-deployement --application-name Github-Actions-Deploy --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name github-actions-group --s3-location bucket=schema-cd,bundleType=zip,key=$GITHUB_SHA.zip
